fixed mobile width overflow

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -26,7 +26,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   font: var(--font-raleway);
   display: flex;
-  width: 100%;
+  width: 100vw;
   overflow-x: hidden;
   height: max-content;
   flex-direction: column;
